--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,9 @@
 
 @import 'tw-animate-css';
 
+/* Leaflet CSS */
+@import 'leaflet/dist/leaflet.css';
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 
